--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -10,17 +10,6 @@ h1 {
 	color: yellow;
 }
 
-.img1 {
-    float: left;
-    margin: 0 20px 20px 20px;
-	line-height=3.0;
-}
-
-.img2 {
-    float: right;
-    margin: 20px 20px 20px 20px;
-}
-
 .p1 {
 	text-align: right;
 	margin: 400px 20px 20px 20px;
@@ -57,9 +46,8 @@ li a:hover:not(.active) {
     background-color: #ddd;
 }
 
-li a.active {
+li a {
     color: white;
     background-color: #4CAF50;
 }
 
-top,right,bottom,left
